# kwin

./: .kde-ci.yml  CMakeLists.txt
src/: abstract_client.cpp  events.cpp  input.cpp  inputdevice.h  inputmethod.cpp  inputmethod.h  internal_client.cpp  main.h  toplevel.h  unmanaged.cpp  virtualkeyboard_dbus.cpp  x11client.cpp  x11client.h
src/backends/: CMakeLists.txt
src/backends/drm/: drm_gpu.cpp  drm_gpu.h  drm_output.cpp  drm_output.h  drm_pipeline.cpp  egl_gbm_backend.cpp  egl_gbm_backend.h
src/backends/libeis/: CMakeLists.txt  connection.cpp  connection.h  device.cpp  device.h  libeisbackend.cpp  libeisbackend.h
src/effects/: CMakeLists.txt  effect_builtins.h
src/effects/effectkit/: qmldir
src/effects/effectkit/qml/: WindowHeap.qml
src/effects/overview/qml/: DesktopBar.qml  ScreenView.qml
src/effects/shared/: CMakeLists.txt  expolayout.cpp  expolayout.h
src/effects/shared/qml/: WindowHeap.qml
src/effects/windowview/: main.cpp  metadata.json  org.kde.KWin.Effect.WindowView1.xml  windowvieweffect.cpp
src/effects/windowview/qml/: main.qml
src/libkwineffects/: kwineffects.h
